# rcc

./: .gitignore  .gitmodules  CMakeLists.txt  RCCConfig.cmake.in
Aurora/: CMakeLists.txt  IObject.h  IObjectInfo.h  RCC_defs.h
Aurora/RuntimeCompiler/: BuildTool.cpp  BuildTool.h  CompileOptions.h  Compiler.h  Compiler_PlatformPosix.cpp  Compiler_PlatformWindows.cpp  FileMonitor.cpp  FileSystemUtils.h  ICompilerLogger.h
Aurora/RuntimeObjectSystem/: IObject.cpp  IObject.h  IObjectControlBlock.cpp  IObjectControlBlock.hpp  IObjectInfo.cpp  IObjectInfo.h  IObjectState.cpp  IObjectState.hpp  IRuntimeObjectSystem.h  ISimpleSerializer.h  InheritanceGraph.hpp  InterfaceDatabase.cpp  InterfaceDatabase.hpp  ObjectInterface.h  ObjectInterfacePerModule.h  ObjectInterfacePerModuleSource.cpp  RuntimeInclude.h  RuntimeLinkLibrary.h  RuntimeMacros.hpp  RuntimeObjectSystem.cpp  RuntimeObjectSystem.h  RuntimeSourceDependency.h  shared_ptr.cpp  shared_ptr.hpp
Aurora/RuntimeObjectSystem/ObjectFactorySystem/: ObjectFactorySystem.cpp
Aurora/RuntimeObjectSystem/SimpleSerializer/: SimpleSerializer.cpp  SimpleSerializer.h
Aurora/cmake/: ProjectFilesExternal.cmake
Aurora/ct/detail/: HashImpl.hpp
Aurora/include/: IObject.h
Aurora/tests/: CMakeLists.txt  test_interface_hash.cpp  test_shared_ptr.cpp
aurora/cmake/: ProjectFilesExternal.cmake
cmake/: rcc_config.cmake  rcc_link_lib.cmake  rcc_strip_extension.cmake
