INCLUDE_DIRECTORIES("../")
add_executable(test_interface_hash test_interface_hash.cpp)
add_executable(test_shared_ptr test_shared_ptr.cpp)
target_link_libraries(test_shared_ptr RuntimeObjectSystem)
target_link_libraries(test_interface_hash RuntimeObjectSystem)
set_target_properties(test_shared_ptr PROPERTIES FOLDER Tests/rcc)
set_target_properties(test_interface_hash PROPERTIES FOLDER Tests/rcc)